# cpp_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: calculator.hpp
src/: CMakeLists.txt  calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_main.cpp
